--- a/index.html
+++ b/index.html
@@ -6,21 +6,75 @@
 </head>
 
 <body>
+	<div class = "header" >
+		<h1 class = main_title>Police vs. Crime</h1>
+		<p class = "subtitle">Visualizing crime and police in the United States</p>
+	</div>
 
-<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+	<div class = "paragraph">
+		<p class = "explaination">This were we explain the project</p>
+	</div>
 
-<div class = "wrapper">
+	<hr class = "short_line">
+	<hr class = "long_line">
+	<hr class = "short_line">
 
-	<h1><p class = "header">This is the start of the capstone project </p></h1>
-
-</div>
+	<div class = "paragraph">
+		<div class = "picture">
+			<img src = "filler_picture.jpg" alt = "space_cat">
+		</div>
+		<p class = "about">This is about an author></p>
+		<div class = "picture">
+			<img src = "filler_picture.jpg" alt = "space_cat">
+		</div>
+		<p class = "about">This is about an author></p>
+		<div class = "picture">
+			<img src = "filler_picture.jpg" alt = "space_cat">
+		</div>
+		<p class = "about">This is about an author></p>
+	</div>
 	
-<h2><p> Do you like it? 
-	<a href="VisualizationSite.php" class="button">Yes!</a>
+	<hr class = "short_line">
+	<hr class = "long_line">
+	<hr class = "short_line">
+
+	<div class = "paragraph">
+		<p class = "crime_explaination">This is where we explain the crime part</p>
+		<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+	</div>
+
+	<hr class = "short_line">
+	<hr class = "long_line">
+	<hr class = "short_line">
+	
+	<div class = "paragraph">
+		<p class = "police_explaination">This is where we explain the police part</p>
+		<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+	</div>
+
+	<hr class = "short_line">
+	<hr class = "long_line">
+	<hr class = "short_line">
+
+	<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+
+	<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+
+	<hr class = "short_line">
+	<hr class = "long_line">
+	<hr class = "short_line">
+
+	<div class = "paragraph">
+		<p class = "contributions">This is where we place the contributions</p>
+		<br>
+		<p class = "contact_us">This is where we place the contact us and license stuff</p>
+	</div>
+
+	<h2><p> Do you like it so far? 
+		<a href="temp_page.html" class="button">Yes!</a>
 	</p></h2>
-	<br>
-	<a href="VisualizationSite.php" class="button">Reload?</a>
 
-	
+
+
 </body>
 </html>
