Added animations to author pictures

--- a/index.html
+++ b/index.html
@@ -19,20 +19,49 @@
 	<hr class = "long_line">
 	<hr class = "short_line">
 
-	<div class = "paragraph">
-		<div class = "picture">
-			<img src = "filler_picture.jpg" alt = "space_cat">
+	<div class = "row">
+		<div class = "column">
+			<div class = "picture_container">
+				<img class = "image" src = "filler_picture.jpg" alt = "space_cat">
+				<div class = "picture_overlay_left">
+					<div class = "picture_text">Author 1</div>
+				</div>
+			</div>
 		</div>
-		<p class = "about">This is about an author></p>
-		<div class = "picture">
-			<img src = "filler_picture.jpg" alt = "space_cat">
+		<div class = "column">
+			<div class = "picture_container">
+				<img class = "image" src = "filler_picture.jpg" alt = "space_cat">
+				<div class = "picture_overlay_up">
+					<div class = "picture_text">Author 2</div>
+				</div>
+			</div>
 		</div>
-		<p class = "about">This is about an author></p>
-		<div class = "picture">
-			<img src = "filler_picture.jpg" alt = "space_cat">
+		<div class = "column">
+			<div class = "picture_container">
+				<img class = "image" src = "filler_picture.jpg" alt = "space_cat">
+				<div class = "picture_overlay_right">
+					<div class = "picture_text">Author 3</div>
+				</div>
+			</div>
 		</div>
-		<p class = "about">This is about an author></p>
 	</div>
+
+	<!--<div class = "paragraph">
+
+		<div class = "picture">
+			<img class = "picture_left" src = "filler_picture.jpg" alt = "space_cat">
+			<img class = "picture_right" src = "filler_picture.jpg" alt = "space_cat">
+		</div>
+		<p class = "about">This is about an author></p>
+		<div class = "picture">
+			<img class = "picture_right" src = "filler_picture.jpg" alt = "space_cat">
+		</div>
+		<p class = "about">This is about an author></p>
+		<div class = "picture">
+			<img class = "picture_left" src = "filler_picture.jpg" alt = "space_cat">
+		</div>
+		<p class = "about">This is about an author></p>
+	</div>-->
 	
 	<hr class = "short_line">
 	<hr class = "long_line">
