Added crime and police maps

--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
 
 <body>
 	<div class = "header" >
-		<h1 class = main_title>Police vs. Crime</h1>
-		<p class = "subtitle">Visualizing crime and police in the United States</p>
+		<h1 class = main_title>Police vs. Crime
+			<h2 class = "sub_title">Visualizing crime and police in the United States</h2>
+		</h1>
 	</div>
 
 	<div class = "paragraph">
-		<p class = "explaination">This were we explain the project</p>
+		<p class = "explaination">This were we explain the project in general</p>
 	</div>
 
+	<br>
 	<hr class = "short_line">
 	<hr class = "long_line">
 	<hr class = "short_line">
+	<br>
 
 	<div class = "row">
 		<div class = "column">
@@ -28,6 +31,7 @@
 				</div>
 			</div>
 		</div>
+
 		<div class = "column">
 			<div class = "picture_container">
 				<img class = "image" src = "filler_picture.jpg" alt = "space_cat">
@@ -36,6 +40,7 @@
 				</div>
 			</div>
 		</div>
+
 		<div class = "column">
 			<div class = "picture_container">
 				<img class = "image" src = "filler_picture.jpg" alt = "space_cat">
@@ -44,54 +49,47 @@
 				</div>
 			</div>
 		</div>
+
 	</div>
 
-	<!--<div class = "paragraph">
-
-		<div class = "picture">
-			<img class = "picture_left" src = "filler_picture.jpg" alt = "space_cat">
-			<img class = "picture_right" src = "filler_picture.jpg" alt = "space_cat">
-		</div>
-		<p class = "about">This is about an author></p>
-		<div class = "picture">
-			<img class = "picture_right" src = "filler_picture.jpg" alt = "space_cat">
-		</div>
-		<p class = "about">This is about an author></p>
-		<div class = "picture">
-			<img class = "picture_left" src = "filler_picture.jpg" alt = "space_cat">
-		</div>
-		<p class = "about">This is about an author></p>
-	</div>-->
-	
+	<br>
 	<hr class = "short_line">
 	<hr class = "long_line">
 	<hr class = "short_line">
+	<br>
 
 	<div class = "paragraph">
 		<p class = "crime_explaination">This is where we explain the crime part</p>
 		<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 	</div>
 
+	<br>
 	<hr class = "short_line">
 	<hr class = "long_line">
 	<hr class = "short_line">
+	<br>
 	
 	<div class = "paragraph">
 		<p class = "police_explaination">This is where we explain the police part</p>
-		<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+		<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/bb0ea7e1-72ae-4da0-808a-3c6c98fb5e57/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+		<br>
 	</div>
 
+	<br>
 	<hr class = "short_line">
 	<hr class = "long_line">
 	<hr class = "short_line">
+	<br>
 
-	<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+	<!--<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>-->
 
-	<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+	<!--<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>-->
 
+	<br>
 	<hr class = "short_line">
 	<hr class = "long_line">
 	<hr class = "short_line">
+	<br>
 
 	<div class = "paragraph">
 		<p class = "contributions">This is where we place the contributions</p>
