Added photo; Broke the maps

--- a/index.html
+++ b/index.html
@@ -34,9 +34,14 @@
 
 		<div class = "column">
 			<div class = "picture_container">
-				<img class = "image" src = "filler_picture.jpg" alt = "space_cat">
+				<img class = "image_up" src = "James_Photo.jpg" alt = "author_james">
 				<div class = "picture_overlay_up">
-					<div class = "picture_text">Author 2</div>
+					<div class = "picture_text">
+						<h1>James Deromedi</h1>
+						<h2>Map Creator</h2>
+						<p>Computer Science Major</p>
+						<p>Physics Minor</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -49,7 +54,6 @@
 				</div>
 			</div>
 		</div>
-
 	</div>
 
 	<br>
@@ -60,7 +64,7 @@
 
 	<div class = "paragraph">
 		<p class = "crime_explaination">This is where we explain the crime part</p>
-		<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+		<iframe width="80%" height="520" frameborder="1" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 	</div>
 
 	<br>
@@ -71,8 +75,7 @@
 	
 	<div class = "paragraph">
 		<p class = "police_explaination">This is where we explain the police part</p>
-		<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/bb0ea7e1-72ae-4da0-808a-3c6c98fb5e57/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-		<br>
+		<iframe width="80%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/bb0ea7e1-72ae-4da0-808a-3c6c98fb5e57/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 	</div>
 
 	<br>
