Fixed the maps!

--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
 	<hr class = "short_line">
 	<br>
 
-	<div class = "paragraph">
-		<p class = "crime_explaination">This is where we explain the crime part</p>
-		<iframe width="80%" height="520" frameborder="1" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+	<div class = "map">
+		<div class = "paragraph">
+			<p class = "crime_explaination">This is where we explain the crime part</p>
+		</div>
+		<iframe width="80%" height="520" frameborder="1" src="https://jmderomedi.carto.com/builder/edfce289-d7bf-4528-8c4e-239c5837bf17/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 	</div>
 
 	<br>
@@ -73,9 +75,11 @@
 	<hr class = "short_line">
 	<br>
 	
-	<div class = "paragraph">
-		<p class = "police_explaination">This is where we explain the police part</p>
-		<iframe width="80%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/bb0ea7e1-72ae-4da0-808a-3c6c98fb5e57/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+	<div class = "map">
+		<div class = "paragraph">
+			<p class = "police_explaination">This is where we explain the police part</p>
+		</div>
+		<iframe width="80%" height="520" frameborder="1" src="https://jmderomedi.carto.com/builder/c07925e1-5c82-45ac-9811-e5e2123f9e87/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 	</div>
 
 	<br>
@@ -83,10 +87,16 @@
 	<hr class = "long_line">
 	<hr class = "short_line">
 	<br>
-
-	<!--<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>-->
-
-	<!--<iframe width="100%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/2a4e2686-6572-4229-a5a7-f7367b5cab1d/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>-->
+	
+	<div class = "map">
+		<p>This is the "Police vs Crime map"</p>
+		<iframe width="80%" height="520" frameborder="0" src="https://jmderomedi.carto.com/builder/dae6e858-e428-4081-a4ad-9169029635e1/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+	</div>
+	<br>
+	<div class = "map">
+		<p>This is the "Citizen vs Crime map"</p>
+		<iframe width="80%" height="520" frameborder="1" src="https://jmderomedi.carto.com/builder/f7ae15d6-8fde-4b12-8e9e-fcbcbdd33b59/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+	</div>
 
 	<br>
 	<hr class = "short_line">
