--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
 	<div class = "row">
 		<div class = "column">
 			<div class = "picture_container">
-				<img class = "image" src = "filler_picture.jpg" alt = "space_cat">
+				<img class = "image_1" src = "Victor_photo.jpg" alt = "space_cat">
 				<div class = "picture_overlay_left">
-					<div class = "picture_text">Author 1</div>
+					<div class = "picture_text">
+						<h1>Ziyang She</h1>
+						<h2>Data analyst</h2>
+						<p>Computer Science Major</p>
+						<p></p>
+					</div>
 				</div>
 			</div>
 		</div>
