--- a/index.html
+++ b/index.html
@@ -67,6 +67,20 @@
 	<hr class = "short_line">
 	<br>
 
+	<!-- Load icon library -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- The form -->
+	<form class="example" action="https://blankslate.io/">
+  		<input type="text" placeholder="What are you looking for..." name="search">
+  		<button type="submit"><i class="fa fa-search"></i></button>
+	</form>
+
+	<br>
+	<hr class = "short_line">
+	<hr class = "long_line">
+	<hr class = "short_line">
+	<br>
+
 	<div class = "map">
 		<div class = "paragraph">
 			<p class = "crime_explaination">This is where we explain the crime part</p>
