More style changes

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 	<title>CS Capstone</title>
 	<link rel="stylesheet" type="text/css" href="visualization_site.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href='https://fonts.googleapis.com/css?family=Judson' rel='stylesheet'>
+	<style type="text/css">
+	body{
+		font-family: 'Judson';
+	}
+</style>
 </head>
-
-<body>
+<body >
 	<div id="navbar_top">
 		<a href="#top_page">Top</a>
 		<a href="#about">About Us</a>
@@ -48,7 +53,7 @@
 		<input type="text" placeholder="What are you looking for..." name="search">
 		<button type="submit"><i class="fa fa-search"></i></button>
 	</form>
-	
+
 	<br>
 	<hr class = "short_line">
 	<hr class = "long_line">
@@ -57,8 +62,9 @@
 	<br>
 	<br>
 	<br>
+
 	<div class = "about_us">
-		<h1>About Us</h1>	
+		<h1 class = "bar header"><span>About Us</span></h1>	
 		<div class = "row">
 			<div class = "column">
 				<div class = "picture_container">
@@ -110,14 +116,6 @@
 	<br>
 	<br>
 	<br>
-
-	<!--<br>
-	<hr class = "short_line">
-	<hr class = "long_line">
-	<hr class = "short_line">
-
-	<br>-->
-
 
 	<br>
 	<hr class = "short_line">
@@ -176,7 +174,7 @@
 	<hr class = "short_line">
 	<hr class = "long_line">
 	<hr class = "short_line" id="contribution">
-	
+
 	<br>
 	<br>
 	<br>
