Added descriptions to more of the charts

--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
 	<br>
 	<div class = "map">
 		<div class = "paragraph" >
-			<p class = "crime_explaination">This is where we explain the crime part</p>
+			<p class = "crime_explaination">Here, we can see data for each state for the amount of reports of violent crime, the amount of reported assaulted officers, and the amount of reported homicides. The states with the highest amounts of all of these incidents are California and Texas. While that can mostly be explained by differences in population, there are still interesting findings in this data. For example, California has by far the greatest amount of homicides, beating out the next largest state, Texas, by about 700 more incidents. </p>
 		</div>
 		<h1>United States Crime</h1>
 		<iframe width="80%" height="520" frameborder="1" src="https://jmderomedi.carto.com/builder/edfce289-d7bf-4528-8c4e-239c5837bf17/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 		<br>
-		<h3>Explain how to navigate the map</h3>
+		<h3>To use the graph, you can click and drag with the mouse to see other sections (such as Alaska and Hawaii), and use the scroll wheel or the embedded buttons to zoom in or zoom out. To show the data of one of the bar graphs on th echart, simply click on the treadrop icon. On certain graphs, you can click on multiple teardrops to see how the two datasets affect each other.</h3>
 	</div>
 
 	<br>
@@ -141,12 +141,12 @@
 	<br>
 	<div class = "map">
 		<div class = "paragraph" >
-			<p class = "police_explaination">This is where we explain the police part</p>
+			<p class = "police_explaination">This graph has data on the amount of police officrs per 1000 people (or essentially police officer density), on total police officer expenditure, and on total corrections spending in general. Interestingly enough, the largest states weren't the ones the the most police expenditure even though the amount of crime seems to have scaled linearly with the data. This means that these states could possibly reduce the amount of crime they have by increasing their amount of police officers. Another interesting point, while California doesn't spend a lot of money of police officers or euipment, the are amongst the highest spenders in the country in terms of other forms of correction, such as on prisons. So California may be able to improve their situation by redistributing how it spends its money.</p>
 		</div>
-		<h1>United States Low Enforcement</h1>
+		<h1>United States Law Enforcement</h1>
 		<iframe width="80%" height="520" frameborder="1" src="https://jmderomedi.carto.com/builder/c07925e1-5c82-45ac-9811-e5e2123f9e87/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 		<br>
-		<h3>Explain how to navigate the map</h3>
+		<h3>To use the graph, you can click and drag with the mouse to see other sections (such as Alaska and Hawaii), and use the scroll wheel or the embedded buttons to zoom in or zoom out. To show the data of one of the bar graphs on th echart, simply click on the treadrop icon. On certain graphs, you can click on multiple teardrops to see how the two datasets affect each other.</h3>
 	</div>
 
 	<br>
@@ -159,7 +159,7 @@
 		<h1>Police vs Crime</h1>
 		<iframe width="80%" height="520" frameborder="1" src="https://jmderomedi.carto.com/builder/dae6e858-e428-4081-a4ad-9169029635e1/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 		<br>
-		<h3>Explain how to navigate the map</h3>
+		<h3>To use the graph, you can click and drag with the mouse to see other sections (such as Alaska and Hawaii), and use the scroll wheel or the embedded buttons to zoom in or zoom out. To show the data of one of the bar graphs on th echart, simply click on the treadrop icon. On certain graphs, you can click on multiple teardrops to see how the two datasets affect each other.</h3>
 	</div>
 
 	<br>
@@ -167,7 +167,7 @@
 		<h1>Citizens vs Crime</h1>
 		<iframe width="80%" height="520" frameborder="1" src="https://jmderomedi.carto.com/builder/f7ae15d6-8fde-4b12-8e9e-fcbcbdd33b59/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 		<br>
-		<h3>Explain how to navigate the map</h3>
+		<h3>To use the graph, you can click and drag with the mouse to see other sections (such as Alaska and Hawaii), and use the scroll wheel or the embedded buttons to zoom in or zoom out. To show the data of one of the bar graphs on th echart, simply click on the treadrop icon. On certain graphs, you can click on multiple teardrops to see how the two datasets affect each other.</h3>
 	</div>
 
 	<br>
